--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ install:
   
 script:
   - sh ./check_format.sh
-  - mvn cobertura:cobertura
+  - mvn clean test
 
 after_success:
+  - mvn clean cobertura:cobertura
   - bash <(curl -s https://codecov.io/bash)
