--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   
 script:
   - sh ./check_format.sh
-  - mvn clean test
+  - mvn clean test -Dmaven.test.jvmargs='-XX:+PrintCompilation'
 
 after_success:
   - mvn clean cobertura:cobertura
