--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   
 script:
   - sh ./check_format.sh
-  - mvn clean test -Dmaven.test.jvmargs='-XX:+PrintCompilation'
+  - mvn clean test -Dmaven.test.jvmargs='-XX:+PrintCompilation -XX:CompileCommand=exclude,com/alipay/hessian/generic/io/GenericObjectSerializer.doWriteObject'
 
 after_success:
   - mvn clean cobertura:cobertura
